--- a/views/index.erb
+++ b/views/index.erb
@@ -29,3 +29,14 @@
 
 	Need a suggestion? Try: <a href="/haiku?url=https%3A%2F%2Fwww.themarshallproject.org%2F2015%2F02%2F28%2Fattica-s-ghosts">Attica</a>
 </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61575622-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
